[package]
name = "localkspace"
version = "0.0.1"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Compute the local k-space of (multi-dimensional) MRI trajectories with nonlinear gradients"
documentation = "https://docs.rs/localkspace/latest/localkspace/"
repository = "https://github.com/stefan-k/localkspace"
readme = "README.md"
keywords = ["magnetic resonance imaging", "local k-space", "nonlinear gradients", "nonlinear encoding"]
categories = ["science"]
exclude = [
  ".travis.yml",
  "push_docs",
]

[dependencies]

[badges]
travis-ci = { repository = "stefan-k/localkspace", branch = "master" }
maintenance = { status = "actively-developed" }
